Fixes long label text wrapping on weighted repeatable (again)

--- a/tool-ui/src/main/webapp/style/v3/repeatable.less
+++ b/tool-ui/src/main/webapp/style/v3/repeatable.less
@@ -968,7 +968,7 @@
     > .repeatableLabel {
       background: white;
       border-bottom: 1px solid @color-border;
-      padding: 12px 45px 12px 45px;
+      padding: 12px 368px 12px 45px;
       &:after {
         top: 12px;
       }
@@ -1005,7 +1005,6 @@
   > ol > li {
     > .repeatableLabel {
       padding-left: 120px;
-      padding-right: 368px;
     }
   }
     
